--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.4",
     "sql.js": "^1.10.3",
-    "uuid": "^13.0.0"
+    "uuid": "^9.0.0"
   }
 }
