--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^3.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "pg": "^8.11.3",
     "socket.io": "^4.7.4",
-    "sql.js": "^1.10.3",
     "uuid": "^9.0.0"
   }
 }
